--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <span class="say">天天吃这么多糖，也没见你有多甜，</span><br>
                     <span class="say">问你个事，你有男朋友吗？</span><br>
                      <span class="say">没有是吧？</span><br>
-                    <span class="say">好，现在你有了！</span><br>
+                    <span class="say">好，现在开始你有了！</span><br>
                     <span class="say"></span><br>
-                    <span class="say">相处了也有一段时间了</span><br>
+                    <span class="say">相处了也有一段时间了，</span><br>
                     <span class="say">虽然你这个人皮了一点，闹了一点，</span><br>
                     <span class="say">但还是很萌的，</span><br>
                     <span class="say">尤其是懒得化妆被我抓到的时候，嘻嘻</span><br>
