--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                <div id="text">
                     <div id="code">                 
                     <span class="say">喂，李juju！</span><br>
-                    <span class="say">偷偷摸摸在干嘛？又吃糖？</span><br>
+                    <span class="say">偷偷摸摸在干嘛？又吃糖？妈的！</span><br>
                     <span class="say">天天吃这么多糖，也没见你有多甜，</span><br>
                     <span class="say">问你个事，你有男朋友吗？</span><br>
                      <span class="say">没有是吧？</span><br>
