--- a/1/index.html
+++ b/1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>Our Love Story</title>
+	<title>答应了我的李juju才是真的好看</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<style type="text/css">
 		@font-face {
@@ -19,32 +19,32 @@
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
-				<span class="comments">我的爱人</span><br />
-				<span class="space"/><span class="comments">我会牵着你的手，走到我们满头白发的那一天</span><br />
-				<span class="space"/><span class="comments">我会守护你生命里的精彩，并陪伴你一路精彩下去。</span><br />
-				<span class="space"/><span class="comments">你的幸福快乐，是我一生的追求。</span><br />
-				<span class="space"/>我会每一天带着笑脸，和你说早安，<br />
-				<span class="space"/>我会每一晚与你道声晚安再入梦乡，<br />
-				<span class="space"/>我会带你去所有你想去的地方，<br />
-				<span class="space"/>陪你闹看你笑<br />
-				<span class="space"/>历经你生命中所有的点点滴滴。<br />
-				<span class="space"/>我期待这一生与你一起走过，<br />
-				<span class="space"/>走到尽头再回头看尽一生铅华满地，<br />
-				<span class="space"/>我期待与你慢慢变老，<br />
-				<span class="space"/>等我们老到哪儿也去不了，<br />
-				<span class="space"/>还能满载着一生的幸福快乐。<br />
-				<span class="keyword">我愿意爱你直到老去，<br />
-				<span class="space"/>我会为我们的未来撑起一片天空，<br />
-				<span class="space"/>为我们的将来担负起一生的责任，<br />
-				<span class="space"/>愿意为你去做每一件能让你开心快乐的事。<br />
-				<span class="space"/>所有我们经历的点点滴滴，<br />都是我们一辈子最美的回忆。</span> <br />
+				<span class="comments">恭喜你李juju！</span><br />
+				<span class="space"/><span class="comments">跟你讲哦，</span><br />
+				<span class="space"/><span class="comments">你捡到宝了，知不知道？</span><br />
+				<span class="space"/><span class="comments">虽然我帅了一点，</span><br />
+				<span class="space"/>但是，<br />
+				<span class="space"/>最好看的人还是你啊对不对？<br />
+				<span class="space"/>喜欢你不少时间了，<br />
+				<span class="space"/>看你闹，看你笑，<br />
+				<span class="space"/>看你蠢，看你笨<br />
+				<span class="space"/>看你像猪一样发话吃很多，<br />
+				<span class="space"/>结果像猫一样吃很少，<br />
+				<span class="space"/>突然就很期待，<br />
+				<span class="space"/>有这样一个女孩子陪着，<br />
+				<span class="space"/>我可能做梦都会笑醒吧。<br />
+				<span class="keyword">现在，<br />
+				<span class="space"/>某ju终于成为我张某人的ju了<br />
+				<span class="space"/>张谨一弟弟很开心，<br />
+				<span class="space"/>张谨一表示李juju可以随意提要求。<br />
+				<span class="space"/>希望我们可以走的长远，<br />希望，张谨一可以在李juju手下活的久一点。</span> <br />
 				<br />
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						月,我爱你！
+						专业养ju认准张谨一哦！
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
@@ -60,9 +60,9 @@
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2010, 10, 2);
-		together.setHours(20);
-		together.setMinutes(0);
+		together.setFullYear(2018, 9, 20);
+		together.setHours(18);
+		together.setMinutes(30);
 		together.setSeconds(0);
 		together.setMilliseconds(0);
 		
