--- a/1/index.html
+++ b/1/index.html
@@ -44,12 +44,12 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						专业养ju认准张谨一哦！
+						张谨一和辣鸡在一起的第
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						Love u forever and ever.<br/>
-						<div class="signature">- wuxia2001</div>
+						专业养ju认准张谨一！<br/>
+						<div class="signature">- 李juju亲启</div>
 					</div>
 				</div>
 			</div>
