--- a/loser/index.html
+++ b/loser/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>My Lonely Life</title>
+	<title>张谨一哭了</title>
 	
 	<style type="text/css">
 		@font-face {
@@ -19,9 +19,9 @@
 		<div id="content" style="width: 1160px; height: 625px; margin-top: 52px; margin-left: 220px;">
 			<div id="code" style="margin-top: 62.5px;">
 			
-				Boy * i = <span class="keyword">new</span> Boy(<span class="string">"BlahGeek"</span>);<br>
-				<span class="comments">// It's me. </span><br>
-				Girl * u ;<br>
+				张谨一<span class="keyword">哭</span>了，<br>
+				<span class="comments">不过没关系，</span><br>
+				生活还得继续。<br>
 				<span class="keyword">while</span> (true) {<br>
 				<span class="placeholder"><span class="keyword">try</span> {<br>
 				<span class="placeholder"><span class="placeholder">u = <span class="keyword">new</span> Girl(); <br>
@@ -63,8 +63,8 @@
 					</div>
 					
 					<div id="loveu">
-						Live alone forever and ever.<br>
-						<div class="signature">- BlahGeek</div>
+						一个人的张谨一无ju可养<br>
+						<div class="signature">- 张谨一真是个弟弟</div>
 					</div>
 				</div>
 			</div>
@@ -75,9 +75,9 @@
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var nolovetime = new Date();
-		nolovetime.setFullYear(2014, 01, 01);
-		nolovetime.setHours(0);
-		nolovetime.setMinutes(0);
+		nolovetime.setFullYear(2018, 09, 16);
+		nolovetime.setHours(20);
+		nolovetime.setMinutes(46);
 		nolovetime.setSeconds(0);
 		nolovetime.setMilliseconds(0);
 		
