--- a/love/index.html
+++ b/love/index.html
@@ -21,7 +21,7 @@
 			<div id="code">
 				<span class="comments">恭喜你李juju！</span><br />
 				<span class="space"/><span class="comments">跟你讲哦，</span><br />
-				<span class="space"/><span class="comments">你捡到宝了，知不知道？</span><br />
+				<span class="space"/><span class="comments">你捡到宝了！知不知道？</span><br />
 				<span class="space"/><span class="comments">虽然我帅了一点，</span><br />
 				<span class="space"/>但是，<br />
 				<span class="space"/>最好看的人还是你啊对不对？<br />
