--- a/love/index.html
+++ b/love/index.html
@@ -25,7 +25,7 @@
 				<span class="space"/><span class="comments">虽然我帅了一点，</span><br />
 				<span class="space"/>但是，<br />
 				<span class="space"/>最好看的人还是你啊对不对？<br />
-				<span class="space"/>喜欢你不少时间了，<br />
+				<span class="space"/>喜欢你的这段时间来，<br />
 				<span class="space"/>看你闹，看你笑，<br />
 				<span class="space"/>看你蠢，看你笨<br />
 				<span class="space"/>看你像猪一样发话吃很多，<br />
