--- a/loser/index.html
+++ b/loser/index.html
@@ -22,14 +22,14 @@
 				张谨一<span class="keyword">哭</span>了，<br>
 				<span class="comments">不过没关系，</span><br>
 				生活还得继续。<br>
-				<span class="keyword">while</span> (true) {<br>
-				<span class="placeholder"><span class="keyword">try</span> {<br>
-				<span class="placeholder"><span class="placeholder">u = <span class="keyword">new</span> Girl(); <br>
-					<span class="placeholder">}<br>
-				<span class="placeholder"><span class="keyword">catch</span> (std::bad_alloc) {<br>
-					<span class="placeholder"><span class="placeholder"><span class="keyword">continue</span>; <br>
-						<span class="placeholder">	}<br>
-				<span class="placeholder">if (u != <span class="string">NULL</span>){ break; }</span><br> 
+				<span class="keyword">其实有预料到啦，<br>
+				<span class="placeholder"><span class="keyword">毕竟，张谨一只是个弟弟，<br>
+				<span class="placeholder"><span class="placeholder">张谨一长的又丑，<br>
+					<span class="placeholder">说话还不好听，<br>
+				<span class="placeholder"><span class="keyword">还又没有钱。<br>
+					<span class="placeholder"><span class="placeholder"><span class="keyword"> <br>
+						<span class="placeholder">没事啦，李juju，<br>
+				<span class="placeholder">能做你的好朋友<br> 
 				<span class="placeholder"><span class="comments">// Usually you will be trapped in this loop<br></span>
 				<span class="placeholder"><span class="comments">// for a *very* long time.<br></span>
 				}<br>
