--- a/loser/index.html
+++ b/loser/index.html
@@ -19,36 +19,30 @@
 		<div id="content" style="width: 1160px; height: 625px; margin-top: 52px; margin-left: 220px;">
 			<div id="code" style="margin-top: 62.5px;">
 			
-				张谨一<span class="keyword">哭</span>了，<br>
-				<span class="comments">不过没关系，</span><br>
-				生活还得继续。<br>
-				<span class="keyword">其实有预料到啦，<br>
-				<span class="placeholder"><span class="keyword">毕竟，张谨一只是个弟弟，<br>
-				<span class="placeholder"><span class="placeholder">张谨一长的又丑，<br>
-					<span class="placeholder">说话还不好听，<br>
-				<span class="placeholder"><span class="keyword">还又没有钱。<br>
-					<span class="placeholder"><span class="placeholder"><span class="keyword"> <br>
-						<span class="placeholder">没事啦，李juju，<br>
-				<span class="placeholder">能做你的好朋友<br> 
-				<span class="placeholder"><span class="comments">// Usually you will be trapped in this loop<br></span>
-				<span class="placeholder"><span class="comments">// for a *very* long time.<br></span>
-				}<br>
-					<span class="keyword">try</span>{<br>
-					<span class="placeholder"><span class="keyword">while</span> (<span class="keyword">true</span>) {<br>
-					<span class="placeholder"><span class="placeholder"><span class="keyword">switch</span>( u-&gt;statu() ){<br>
-							<span class="placeholder"><span class="placeholder"><span class="keyword">case</span><span class="string">"hungry"</span>: i-&gt;feed(u);break; <br>
-					<span class="placeholder"><span class="placeholder"><span class="keyword">case</span><span class="string">"tired"</span>: i-&gt;hug(u);break; <br>
-					<span class="placeholder"><span class="placeholder"><span class="keyword">case</span><span class="string">"sleepy"</span>: i-&gt;sleep(u);break; <br>
-					<span class="placeholder"><span class="placeholder"><span class="keyword">default</span>: i-&gt;say(u,<span class="string">"I Love U"</span>);break; <br>
-					<span class="placeholder"><span class="placeholder">}<br>
-					<span class="placeholder">}<br>
-				}<br>
-				<span class="keyword">catch</span>(Girl::DoNotLoveMe){ <br>
-				<span class="comments">// Some day I will catch this message.<br></span>
-				<span class="placeholder">i-&gt;believeInLove (<span class="keyword">false</span>); <br>
-				<span class="placeholder"><span class="comments">// I will never believe in love anymore.<br></span>
-				<span class="placeholder">sys.exit(-1); <span class="comments"><br>// Until reboot.</span><br>
-				}<br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				 <span class="say">喂，李juju！</span><br>
+				
 			</span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></div>
 			<div id="loveHeart">
 				<canvas id="garden" width="670" height="625"></canvas>
