--- a/loser/index.html
+++ b/loser/index.html
@@ -48,10 +48,10 @@
 				<canvas id="garden" width="670" height="625"></canvas>
 				<div id="words">
 					<div id="messages">
-						&nbsp;&nbsp;Girls, I have &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;沙雕张谨一 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<br> waiting for you<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;for
+						<br> 喜欢李juju<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;for
 						<br>
 						<div id="elapseClock">&nbsp;&nbsp;&nbsp;&nbsp;<span class="digit">333</span> days <span class="digit">17</span> hrs <span class="digit"><br>&nbsp;&nbsp;07</span> mins <span class="digit">33</span> secs</div>
 					</div>
