--- a/loser/index.html
+++ b/loser/index.html
@@ -19,30 +19,30 @@
 		<div id="content" style="width: 1160px; height: 625px; margin-top: 52px; margin-left: 220px;">
 			<div id="code" style="margin-top: 62.5px;">
 			
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				 <span class="say">喂，李juju！</span><br>
-				
+				 <span class="comments">张谨一哭了，</span><br>
+				 <span class="comments">不过没关系，</span><br>
+				 <span class="comments">闹钟依然会响起，</span><br>
+				 <span class="comments">吃饭依然要继续，</span><br>
+				 <span class="comments">生活还得苟下去，</span><br>
+				 <span class="comments">对吧？</span><br>
+				 <span class="comments"> </span><br>
+				 <span class="space">其实有预料到啦，</span><br>
+				 <span class="space">毕竟，</span><br>
+				 <span class="space">张谨一只是个弟弟，</span><br>
+				 <span class="space">长得又丑，</span><br>
+				 <span class="space">说话也不好听，</span><br>
+				 <span class="space">还有没有钱，</span><br>
+				 <span class="space"></span><br>
+				 <span class="keyword">喂，李juju！</span><br>
+				 <span class="keyword">虽然不能做情侣，</span><br>
+				 <span class="keyword">但是朋友还是能继续，</span><br>
+				 <span class="keyword">答应我的长期饭票不能鸽啊，</span><br>
+				 <span class="keyword">张谨一不开心的时候依然很能吃。</span><br>
+				 <span class="keyword"></span><br>
+				 <span class="keyword">最后祝李juju，</span><br>
+				 <span class="keyword">会找到自己的理想男票，</span><br>
+				 <span class="keyword">好了，</span><br>
+				 <span class="keyword">张谨一告辞。</span><br>
 			</span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></div>
 			<div id="loveHeart">
 				<canvas id="garden" width="670" height="625"></canvas>
@@ -51,7 +51,7 @@
 						&nbsp;&nbsp;沙雕张谨一 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<br> 喜欢李juju<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;for
+						<br> 喜欢李juju的<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;第
 						<br>
 						<div id="elapseClock">&nbsp;&nbsp;&nbsp;&nbsp;<span class="digit">333</span> days <span class="digit">17</span> hrs <span class="digit"><br>&nbsp;&nbsp;07</span> mins <span class="digit">33</span> secs</div>
 					</div>
