--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                       <span class="say">你是不是也应该表示一下，接受一下我，</span><br>
                        <span class="say">毕竟，老年人也是需要照顾的，</span><br>
                         <span class="say">你不能一直欺负一个喜欢你的人，对吧？</span><br>
-                         <span class="say">赶紧答应我啦，ju，保证和现在一样对你好啦！</span><br>
+                         <span class="say">赶紧答应我啦，ju，</span><br>
+                           <span class="say">保证和现在一样对你好啦！</span><br>
                    <br>
                     <span class="say"><span class="space"></span> -- Yours, 张谨一弟弟。</span>
                     </div>
