--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                          <span class="say">赶紧答应我啦，ju，</span><br>
                            <span class="say">保证和现在一样对你好啦！</span><br>
                    <br>
-                    <span class="say"><span class="space"></span> -- Yours, 张谨一弟弟。</span>
+                    <span class="say"><span class="space"></span> -- Yours,养ju专业户张谨一。</span>
                     </div>
                 </div>
                 <div id="clock-box">
