--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!-- saved from url=(0027)http://itzoo.info/love.html -->
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>李juju真的好看</title>
+        <title>老妈45岁生日快乐</title>
         
         <link type="text/css" rel="stylesheet" href="./Love_files/default.css">
         <script type="text/javascript" src="./Love_files/jquery.min.js"></script>
@@ -21,8 +21,8 @@
             <div id="wrap">
                <div id="text">
                     <div id="code">                 
-                    <span class="say">喂，李juju！</span><br>
-                    <span class="say">偷偷摸摸在干嘛？又吃糖？</span><br>
+                    <span class="say">1997年8月1日</span><br>
+                    <span class="say">有一个人</span><br>
                     <span class="say">天天吃这么多糖，也没见你有多甜，</span><br>
                     <span class="say">问你个事，你有男朋友吗？</span><br>
                      <span class="say">没有是吧？</span><br>
@@ -42,11 +42,11 @@
                          <span class="say">赶紧答应我啦，ju，</span><br>
                            <span class="say">保证和现在一样对你好啦！</span><br>
                    <br>
-                    <span class="say"><span class="space"></span> -- Yours,养ju专业户张谨一。</span>
+                    <span class="say"><span class="space"></span> -- 儿子，张笑宾。</span>
                     </div>
                 </div>
                 <div id="clock-box">
-                   张谨一与李juju认识的
+                   张笑宾来到世上的第
                         <div id="clock"></div>
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
@@ -188,8 +188,8 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
             var together = new Date();
-            together.setFullYear(2018, 8, 9);
-            together.setHours(17);
+            together.setFullYear(1997, 7, 1);
+            together.setHours(19);
             together.setMinutes(45);
             together.setSeconds(0);
             together.setMilliseconds(0);
