--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
             <div id="wrap">
                <div id="text">
                     <div id="code">                 
-                    <span class="say">1997年8月1日</span><br>
-                    <span class="say">有一个人</span><br>
-                    <span class="say">天天吃这么多糖，也没见你有多甜，</span><br>
+                    <span class="say">1973年10月29日，</span><br>
+                    <span class="say">张笑宾来到了这个世界，</span><br>
                     <span class="say">问你个事，你有男朋友吗？</span><br>
                      <span class="say">没有是吧？</span><br>
                     <span class="say">好，现在开始你有了！</span><br>
@@ -46,7 +45,7 @@
                     </div>
                 </div>
                 <div id="clock-box">
-                   张笑宾来到世上的第
+                   李美珍来到世界上的第
                         <div id="clock"></div>
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
@@ -188,7 +187,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
             var together = new Date();
-            together.setFullYear(1997, 7, 1);
+            together.setFullYear(1973, 9, 29);
             together.setHours(19);
             together.setMinutes(45);
             together.setSeconds(0);
