--- a/index.html
+++ b/index.html
@@ -22,24 +22,31 @@
                <div id="text">
                     <div id="code">                 
                     <span class="say">1973年10月29日，</span><br>
-                    <span class="say">张笑宾来到了这个世界，</span><br>
-                    <span class="say">问你个事，你有男朋友吗？</span><br>
-                     <span class="say">没有是吧？</span><br>
-                    <span class="say">好，现在开始你有了！</span><br>
+                    <span class="say">李美珍来到了这个世界，</span><br>
+                    <span class="say">24年后，</span><br>
+                     <span class="say">她成为了一名母亲，</span><br>
+                    <span class="say">她有了自己的第一个孩子。</span><br>
                     <span class="say"></span><br>
-                    <span class="say">相处了也有一段时间了，</span><br>
-                    <span class="say">虽然你这个人皮了一点，闹了一点，</span><br>
-                    <span class="say">但还是很萌的，</span><br>
-                    <span class="say">尤其是懒得化妆被我抓到的时候，嘻嘻</span><br>
-                    <span class="say">以后就由我来陪着你吧！</span><br>
+                    <span class="say">这个孩子从小不好好学习，</span><br>
+                    <span class="say">也不听话，</span><br>
+                    <span class="say">他从来没有记得过母亲的生日，</span><br>
+                    <span class="say">直到有一天他想起来了这件很重要的事，</span><br>
+                    <span class="say">在他21岁，而他妈已经45岁的时候。</span><br>
+                    <span class="say"> </span><br>
+                    <span class="say">他写了一个网页，</span><br>
+                    <span class="say">祝他妈妈生日快乐，</span><br>
+                    <span class="say">21年来，</span><br>
+                    <span class="say">这是他第一次正式给妈妈的生日祝福，</span><br>
+                    <span class="say">但他知道，</span><br>
+                    <span class="say">以后还会有很多很多次。</span><br>
                     <br>
-                    <span class="say">就这么愉快的决定了啊，</span><br>
-                     <span class="say">你看我都不嫌弃你，</span><br>
-                      <span class="say">你是不是也应该表示一下，接受一下我，</span><br>
-                       <span class="say">毕竟，老年人也是需要照顾的，</span><br>
-                        <span class="say">你不能一直欺负一个喜欢你的人，对吧？</span><br>
-                         <span class="say">赶紧答应我啦，ju，</span><br>
-                           <span class="say">保证和现在一样对你好啦！</span><br>
+                    <span class="say">祝45岁的妈妈生日快乐，</span><br>
+                     <span class="say">虽然相隔甚远，</span><br>
+                      <span class="say">但亲情无距。</span><br>
+                       <span class="say">老去的只是年龄，</span><br>
+                        <span class="say">不应该是人，</span><br>
+                         <span class="say">希望妈妈永远幸福开心，</span><br>
+                           <span class="say">儿行千里，母勿忧也。</span><br>
                    <br>
                     <span class="say"><span class="space"></span> -- 儿子，张笑宾。</span>
                     </div>
