--- a/index.html
+++ b/index.html
@@ -23,28 +23,22 @@
                     <div id="code">                 
                     <span class="say">1973年10月29日，</span><br>
                     <span class="say">李美珍来到了这个世界，</span><br>
-                    <span class="say">24年后，</span><br>
-                     <span class="say">她成为了一名母亲，</span><br>
+                    <span class="say">24年后，她成为了一名母亲，</span><br>
                     <span class="say">她有了自己的第一个孩子。</span><br>
                     <span class="say"></span><br>
-                    <span class="say">这个孩子从小不好好学习，</span><br>
-                    <span class="say">也不听话，</span><br>
+                    <span class="say">这个孩子从小不好好学习，也不听话，</span><br>
                     <span class="say">他从来没有记得过母亲的生日，</span><br>
                     <span class="say">直到有一天他想起来了这件很重要的事，</span><br>
                     <span class="say">在他21岁，而他妈已经45岁的时候。</span><br>
                     <span class="say"> </span><br>
-                    <span class="say">他写了一个网页，</span><br>
-                    <span class="say">祝他妈妈生日快乐，</span><br>
+                    <span class="say">他写了一个网页，祝他妈妈生日快乐，</span><br>
                     <span class="say">21年来，</span><br>
                     <span class="say">这是他第一次正式给妈妈的生日祝福，</span><br>
-                    <span class="say">但他知道，</span><br>
-                    <span class="say">以后还会有很多很多次。</span><br>
+                    <span class="say">但他知道，以后还会有很多很多次。</span><br>
                     <br>
                     <span class="say">祝45岁的妈妈生日快乐，</span><br>
-                     <span class="say">虽然相隔甚远，</span><br>
-                      <span class="say">但亲情无距。</span><br>
-                       <span class="say">老去的只是年龄，</span><br>
-                        <span class="say">不应该是人，</span><br>
+                     <span class="say">虽然相隔甚远，但亲情无距。</span><br>
+                       <span class="say">老去的只是年龄，不应该是人，</span><br>
                          <span class="say">希望妈妈永远幸福开心，</span><br>
                            <span class="say">儿行千里，母勿忧也。</span><br>
                    <br>
