--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
             <div id="wrap">
                <div id="text">
                     <div id="code">                 
-                    <span class="say">1973年10月29日，</span><br>
-                    <span class="say">李美珍来到了这个世界，</span><br>
-                    <span class="say">24年后，她成为了一名母亲，</span><br>
+                    <span class="say">45年前，她来到了这个世界，</span><br>
+                    <span class="say">21年前，她成为了一名母亲，</span><br>
                     <span class="say">她有了自己的第一个孩子。</span><br>
                     <span class="say"></span><br>
                     <span class="say">这个孩子从小不好好学习，也不听话，</span><br>
@@ -32,21 +31,20 @@
                     <span class="say">在他21岁，而他妈已经45岁的时候。</span><br>
                     <span class="say"> </span><br>
                     <span class="say">他写了一个网页，祝他妈妈生日快乐，</span><br>
-                    <span class="say">21年来，</span><br>
-                    <span class="say">这是他第一次正式给妈妈的生日祝福，</span><br>
+                    <span class="say">21年来，这是他第一次正式给妈妈的生日祝福，</span><br>
                     <span class="say">但他知道，以后还会有很多很多次。</span><br>
                     <br>
                     <span class="say">祝45岁的妈妈生日快乐，</span><br>
                      <span class="say">虽然相隔甚远，但亲情无距。</span><br>
                        <span class="say">老去的只是年龄，不应该是人，</span><br>
-                         <span class="say">希望妈妈永远幸福开心，</span><br>
+                         <span class="say">希望妈妈永远年轻，幸福开心，</span><br>
                            <span class="say">儿行千里，母勿忧也。</span><br>
                    <br>
                     <span class="say"><span class="space"></span> -- 儿子，张笑宾。</span>
                     </div>
                 </div>
                 <div id="clock-box">
-                   李美珍来到世界上的
+                   她来到世界上的
                         <div id="clock"></div>
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
