--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <span class="say">但他知道，以后还会有很多很多次。</span><br>
                     <br>
                     <span class="say">祝45岁的妈妈生日快乐，</span><br>
-                     <span class="say">虽然相隔甚远，但亲情无距。</span><br>
+                     <span class="say">虽相隔甚远，但亲情无距。</span><br>
                        <span class="say">老去的只是年龄，不应该是人，</span><br>
                          <span class="say">希望妈妈永远年轻，幸福开心，</span><br>
                            <span class="say">儿行千里，母勿忧也。</span><br>
