--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div id="clock-box">
-                   张谨一认识絮絮的
+                   张谨一认识莫若伊的
                         <div id="clock"></div>
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
