--- a/love/index.html
+++ b/love/index.html
@@ -44,7 +44,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						张谨一和絮絮在一起的第
+						张谨一和莫若伊在一起的第
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
